Fix T88227: Eevee not working on AMD 535 cards.

Enabled HQ normals workaround for this specific configuration.