source/blender/gpu/intern/gpu_extensions.c
@@ -336,9 +336,9 @@ void gpu_extensions_init(void)
         strstr(renderer, " RX 560 ") || strstr(renderer, " RX 560X ") ||
         strstr(renderer, " RX 570 ") || strstr(renderer, " RX 580 ") ||
         strstr(renderer, " RX 580X ") || strstr(renderer, " RX 590 ") ||
-        strstr(renderer, " RX550/550 ") || strstr(renderer, " (TM) 520  ") ||
-        strstr(renderer, " (TM) 530  ") || strstr(renderer, " R5 ") || strstr(renderer, " R7 ") ||
-        strstr(renderer, " R9 ")) {
+        strstr(renderer, " RX550/550 ") || strstr(renderer, "(TM) 520 ") ||
+        strstr(renderer, "(TM) 530 ") || strstr(renderer, "(TM) 535 ") ||
+        strstr(renderer, " R5 ") || strstr(renderer, " R7 ") || strstr(renderer, " R9 ")) {
       GG.use_hq_normals_workaround = true;
     }
   }
